added send verification endpoint + sign in by phone
